test_regress/t/t_tagged_if.out
%Error-UNSUPPORTED: t/t_tagged_if.v:226:37: Unsupported: &&& expression
  226 |     if (instr matches tagged Jmp .j &&&
      |                                     ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_if.v:236:35: Unsupported: &&& expression
  236 |     if (v matches tagged Valid .n &&& (n > 50))
      |                                   ^~~
%Error-UNSUPPORTED: t/t_tagged_if.v:245:35: Unsupported: &&& expression
  245 |     if (v matches tagged Valid .n &&& (n > 50))
      |                                   ^~~
%Error-UNSUPPORTED: t/t_tagged_if.v:274:37: Unsupported: &&& expression
  274 |     if (instr matches tagged Jmp .j &&&
      |                                     ^~~
%Error: Exiting due to
